<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.report.ReportFragment">

    <com.timekeeping.smart.custom.CustomHeaderView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftDrawable="@drawable/ic_bg_back"
        app:title="@string/str_report_header" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_select_customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_button_test"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:paddingHorizontal="30dp"
        android:paddingVertical="@dimen/margin_10_dp"
        android:text="@string/str_select_customer"
        android:textAllCaps="false"
        android:textColor="@color/color_white" />

    <EditText
        android:layout_below="@id/btn_select_customer"
        android:id="@+id/edt_content"
        style="@style/roboto_regular"
        android:textSize="@dimen/margin_16_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16_dp"
        android:layout_marginHorizontal="@dimen/margin_16_dp"
        android:background="@drawable/bg_border_text_box_profile"
        android:gravity="start"
        android:hint="@string/str_hide_content"
        android:maxLength="250"
        android:maxLines="2"
        android:minLines="2"
        android:paddingHorizontal="11dp"
        android:paddingVertical="@dimen/margin_14_dp"
        android:textColor="@color/text_black"
        android:textColorHint="#8897AE"/>

    <LinearLayout
        android:layout_marginHorizontal="@dimen/margin_16_dp"
        android:layout_marginTop="@dimen/margin_16_dp"
        android:layout_below="@id/edt_content"
        android:orientation="horizontal"
        android:id="@+id/ll_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_list_image"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:layout_below="@id/header"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_button"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:paddingHorizontal="30dp"
            android:gravity="center"
            android:text="@string/str_list_image"
            android:textAllCaps="false"
            android:textColor="@color/color_white" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_marginStart="@dimen/margin_16_dp"
            android:id="@+id/btn_take_a_photo"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_below="@id/header"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_button_test"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:paddingHorizontal="20dp"
            android:paddingVertical="@dimen/margin_10_dp"
            android:src="@drawable/ic_photo_camera"
            android:textAllCaps="false"
            android:textColor="@color/color_white" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="@dimen/margin_16_dp"
        android:layout_marginStart="@dimen/margin_16_dp"
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_image"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_button_test"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:paddingHorizontal="30dp"
        android:paddingVertical="@dimen/margin_10_dp"
        android:text="@string/str_save"
        android:textAllCaps="false"
        android:textColor="@color/md_deep_orange_700" />

    <LinearLayout
        android:layout_marginTop="@dimen/margin_16_dp"
        android:layout_below="@id/btn_save"
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/md_blue_200"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/roboto_bold_16dp"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_stt" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_background" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/roboto_bold_16dp"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_date" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_background" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/roboto_bold_16dp"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_customer" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_background" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/roboto_bold_16dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_content_title" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_background" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/roboto_bold_16dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_list_image_title" />
    </LinearLayout>

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/ll_header"
        android:background="@color/color_background" />

    <com.timekeeping.smart.base.adapter.BaseRecyclerView
        android:layout_below="@id/view_line"
        android:id="@+id/rcv_time_keeping"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:brv_padding_bottom="@dimen/margin_10_dp"
        tools:listitem="@layout/item_add_address" />

</RelativeLayout>